[package]
name = "valands-netmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.26.0"
trust-dns-resolver = "0.20.3"
pktparse = "0.7.0"
serde = { version = "1.0.132", features = ["derive"] }
nom = "7.1.0"
dhcp4r = "0.2.3"
dns-parser = "0.8.0"
base64 = "0.13.0"
serde_json = "1.0.73"
tls-parser = "0.11.0"
rayon = "1.5.1"
eframe = "0.16.0"
egui = "0.16.1"
